syntax = "proto3";

package proto;
import "google/protobuf/any.proto";
import "proto/balance.proto";


  message WatchRequest {
    
    oneof request_union {
      WatchCreateRequest create_request = 1;
      WatchHeartbeatRequest heartbeat_request = 2;
      WatchLoadReportRequest load_report_request = 3;
    }
  }

  message WatchCreateRequest {
   
    string service_port = 1;
    uint32 heartbeat_interval = 2; 
  }

  enum ServiceStatus{
    Down = 0;
    Up = 1;
  }

  message WatchHeartbeatRequest {
    ServiceStatus service_status = 1;
  }

  message WatchLoadReportRequest {
    google.protobuf.Any load_report_data = 2;
  }

  message WatchResponse {
    uint32 worker_id = 1;
    BalanceType balance_type = 2;
  }

 service Watch {
  rpc Watch(stream WatchRequest) returns (stream WatchResponse);
}
  